; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/amd/amd/extr_clock.c_free_callout.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/amd/amd/extr_clock.c_free_callout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { %struct.TYPE_5__* }

@nfree_callouts = common dso_local global i64 0, align 8
@CALLOUT_FREE_SLOP = common dso_local global i64 0, align 8
@free_callouts = common dso_local global %struct.TYPE_5__* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*)* @free_callout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_callout(%struct.TYPE_5__* %0) #0 {
  %2 = alloca %struct.TYPE_5__*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %2, align 8
  %3 = load i64, i64* @nfree_callouts, align 8
  %4 = load i64, i64* @CALLOUT_FREE_SLOP, align 8
  %5 = icmp sgt i64 %3, %4
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %8 = call i32 @XFREE(%struct.TYPE_5__* %7)
  br label %16

9:                                                ; preds = %1
  %10 = load %struct.TYPE_5__*, %struct.TYPE_5__** @free_callouts, align 8
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i32 0, i32 0
  store %struct.TYPE_5__* %10, %struct.TYPE_5__** %12, align 8
  %13 = load %struct.TYPE_5__*, %struct.TYPE_5__** %2, align 8
  store %struct.TYPE_5__* %13, %struct.TYPE_5__** @free_callouts, align 8
  %14 = load i64, i64* @nfree_callouts, align 8
  %15 = add nsw i64 %14, 1
  store i64 %15, i64* @nfree_callouts, align 8
  br label %16

16:                                               ; preds = %9, %6
  ret void
}

declare dso_local i32 @XFREE(%struct.TYPE_5__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
